--- a/v2/public/stylesheets/sass/base/utilities.scss
+++ b/v2/public/stylesheets/sass/base/utilities.scss
@@ -48,3 +48,7 @@
     z-index: 10000;
     position: relative;
 }
+
+.ui.tiny.image {
+    width: 15rem;
+}
